--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -16,8 +16,7 @@ jobs:
     - name: Set up Node.js
       uses: actions/setup-node@v2
       with:
-        node-version: '22.16' # Cambia a la versión que necesites
+        node-version: '22.16'
     - run: npm install
     - run: npm install mysql2
     - run: npm install formidable papaparse
-    - run: npm test # Si tienes pruebas, de lo contrario, puedes omitir esta línea
